--- a/index.html
+++ b/index.html
@@ -36,117 +36,129 @@
 <body>
 
     <header class="header">
-        <nav class="header-navigation">
-            <a class="header-logo" href="./index.html">Web<span class="web">Studio</span></a>
-            <ul class="header-menu-list">
-                <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
-                <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
-                <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="header-contacts">
-            <ul class="header-contacts-list">
-                <li class="header-contacts-item"><a class="header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-contacts-item"><a class="header-contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+        <div class="container header-container">
+            <nav class="header-navigation">
+                <a class="header-logo" href="./index.html">Web<span class="web">Studio</span></a>
+                <ul class="header-menu-list">
+                    <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
+                    <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
+                    <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
+                </ul>
+            </nav>
+            <address class="header-contacts">
+                <ul class="header-contacts-list">
+                    <li class="header-contacts-item"><a class="header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="header-contacts-item"><a class="header-contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
 
     <main>
         
         <section class="hero">
-            <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button class="hero-btn" type="button">Order Service</button>
+            <div class="container">
+                <h1 class="hero-title">Effective Solutions for Your Business</h1>
+                <button class="hero-btn" type="button">Order Service</button>
+            </div>
         </section>
 
-        <section class="our-advantages">
-            <h2 class="visually-hidden">Our Advantages</h2>
-            <ul class="advantages-section-list">
-                <li class="advantages-section-item">
-                    <h3 class="advantages-section-subtitle">Strategy</h3>
-                    <p class="advantages-section-text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-                </li>
-                <li class="advantages-section-item">
-                    <h3 class="advantages-section-subtitle">Punctuality</h3>
-                    <p class="advantages-section-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                </li>
-                <li class="advantages-section-item">
-                    <h3 class="advantages-section-subtitle">Diligence</h3>
-                    <p class="advantages-section-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li class="advantages-section-item">
-                    <h3 class="advantages-section-subtitle">Technologies</h3>
-                    <p class="advantages-section-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>
+        <section class="our-advantages section">
+            <div class="container">
+                <h2 class="visually-hidden">Our Advantages</h2>
+                <ul class="advantages-section-list">
+                    <li class="advantages-section-item">
+                        <h3 class="advantages-section-subtitle">Strategy</h3>
+                        <p class="advantages-section-text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                    </li>
+                    <li class="advantages-section-item">
+                        <h3 class="advantages-section-subtitle">Punctuality</h3>
+                        <p class="advantages-section-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    </li>
+                    <li class="advantages-section-item">
+                        <h3 class="advantages-section-subtitle">Diligence</h3>
+                        <p class="advantages-section-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+                    </li>
+                    <li class="advantages-section-item">
+                        <h3 class="advantages-section-subtitle">Technologies</h3>
+                        <p class="advantages-section-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    </li>
+            </div>
             </ul>
         </section>
 
-        <section class="our-team">
-            <h2 class="team-section-title">Our Team</h2>
-            <ul class="team-section-list">
-                <li class="team-section-item">
-                    <img class="team-section-img" src="./images/img-01-mark.jpg" alt="photo of Mark Guerrero" width="264" height="260">
-                    <h3 class="team-section-subtitle">Mark Guerrero</h3>
-                    <p class="team-section-text">Product Designer</p>
-                </li>
-                <li class="team-section-item">
-                    <img class="team-section-img" src="./images/img-02-tom.jpg" alt="photo of Tom Ford" width="264" height="260">
-                    <h3 class="team-section-subtitle">Tom Ford</h3>
-                    <p class="team-section-text">Frontend Developer</p>
-                </li>
-                <li class="team-section-item">
-                    <img class="team-section-img" src="./images/img-03-camila.jpg" alt="photo of Camila Garcia" width="264" height="260">
-                    <h3 class="team-section-subtitle">Camila Garcia</h3>
-                    <p class="team-section-text">Marketing</p>
-                </li>
-                <li class="team-section-item">
-                    <img class="team-section-img" src="./images/img-04-daniel.jpg" alt="photo of Daniel Wilson" width="264" height="260">
-                    <h3 class="team-section-subtitle">Daniel Wilson</h3>
-                    <p class="team-section-text">UI Designer</p>
-                </li>
-            </ul>
+        <section class="our-team section">
+            <div class="container">
+                <h2 class="team-section-title">Our Team</h2>
+                <ul class="team-section-list">
+                    <li class="team-section-item">
+                        <img class="team-section-img" src="./images/img-01-mark.jpg" alt="photo of Mark Guerrero" width="264" height="260">
+                        <h3 class="team-section-subtitle">Mark Guerrero</h3>
+                        <p class="team-section-text">Product Designer</p>
+                    </li>
+                    <li class="team-section-item">
+                        <img class="team-section-img" src="./images/img-02-tom.jpg" alt="photo of Tom Ford" width="264" height="260">
+                        <h3 class="team-section-subtitle">Tom Ford</h3>
+                        <p class="team-section-text">Frontend Developer</p>
+                    </li>
+                    <li class="team-section-item">
+                        <img class="team-section-img" src="./images/img-03-camila.jpg" alt="photo of Camila Garcia" width="264" height="260">
+                        <h3 class="team-section-subtitle">Camila Garcia</h3>
+                        <p class="team-section-text">Marketing</p>
+                    </li>
+                    <li class="team-section-item">
+                        <img class="team-section-img" src="./images/img-04-daniel.jpg" alt="photo of Daniel Wilson" width="264" height="260">
+                        <h3 class="team-section-subtitle">Daniel Wilson</h3>
+                        <p class="team-section-text">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
-        <section class="our-portfolio">
-            <h2 class="portfolio-section-title">Our Portfolio</h2>
-            <ul class="portfolio-section-list">
-                <li class="portfolio-section-item">
-                    <img class="portfolio-section-img" src="./images/img-05-banking-app.jpg" alt="photo of banking app" width="360" height="300">
-                    <h3 class="portfolio-section-subtitle">Banking App</h3>
-                    <p class="portfolio-section-text">App</p>
-                </li>
-                <li class="portfolio-section-item">
-                    <img class="portfolio-section-img" src="./images/img-06-cashless-payment.jpg" alt="photo of cashless payment" width="360" height="300">
-                    <h3 class="portfolio-section-subtitle">Cashless Payment</h3>
-                    <p class="portfolio-section-text">Marketing</p>
-                </li>
-                <li class="portfolio-section-item">
-                    <img class="portfolio-section-img" src="./images/img-07-meditation-app.jpg" alt="photo of meditation app" width="360" height="300">
-                    <h3 class="portfolio-section-subtitle">Meditation App</h3>
-                    <p class="portfolio-section-text">App</p>
-                </li>
-                <li class="portfolio-section-item">
-                    <img class="portfolio-section-img" src="./images/img-08-taxi-service.jpg" alt="photo of taxi service" width="360" height="300">
-                    <h3 class="portfolio-section-subtitle">Taxi Service</h3>
-                    <p class="portfolio-section-text">Marketing</p>
-                </li>
-                <li class="portfolio-section-item">
-                    <img class="portfolio-section-img" src="./images/img-09-screen-illustrations.jpg" alt="photo of screen illustrations" width="360" height="300">
-                    <h3 class="portfolio-section-subtitle">Screen Illustrations</h3>
-                    <p class="portfolio-section-text">Design</p>
-                </li>
-                <li class="portfolio-section-item">
-                    <img class="portfolio-section-img" src="./images/img-10-online-courses.jpg" alt="photi of online courses" width="360" height="300">
-                    <h3 class="portfolio-section-subtitle">Online Courses</h3>
-                    <p class="portfolio-section-text">Marketing</p>
-                </li>
-            </ul>
-        </section>
+        <section class="our-portfolio section">
+            <div class="container">
+                <h2 class="portfolio-section-title">Our Portfolio</h2>
+                <ul class="portfolio-section-list">
+                    <li class="portfolio-section-item">
+                        <img class="portfolio-section-img" src="./images/img-05-banking-app.jpg" alt="photo of banking app" width="360" height="300">
+                        <h3 class="portfolio-section-subtitle">Banking App</h3>
+                        <p class="portfolio-section-text">App</p>
+                    </li>
+                    <li class="portfolio-section-item">
+                        <img class="portfolio-section-img" src="./images/img-06-cashless-payment.jpg" alt="photo of cashless payment" width="360" height="300">
+                        <h3 class="portfolio-section-subtitle">Cashless Payment</h3>
+                        <p class="portfolio-section-text">Marketing</p>
+                    </li>
+                    <li class="portfolio-section-item">
+                        <img class="portfolio-section-img" src="./images/img-07-meditation-app.jpg" alt="photo of meditation app" width="360" height="300">
+                        <h3 class="portfolio-section-subtitle">Meditation App</h3>
+                        <p class="portfolio-section-text">App</p>
+                    </li>
+                    <li class="portfolio-section-item">
+                        <img class="portfolio-section-img" src="./images/img-08-taxi-service.jpg" alt="photo of taxi service" width="360" height="300">
+                        <h3 class="portfolio-section-subtitle">Taxi Service</h3>
+                        <p class="portfolio-section-text">Marketing</p>
+                    </li>
+                    <li class="portfolio-section-item">
+                        <img class="portfolio-section-img" src="./images/img-09-screen-illustrations.jpg" alt="photo of screen illustrations" width="360" height="300">
+                        <h3 class="portfolio-section-subtitle">Screen Illustrations</h3>
+                        <p class="portfolio-section-text">Design</p>
+                    </li>
+                    <li class="portfolio-section-item">
+                        <img class="portfolio-section-img" src="./images/img-10-online-courses.jpg" alt="photi of online courses" width="360" height="300">
+                        <h3 class="portfolio-section-subtitle">Online Courses</h3>
+                        <p class="portfolio-section-text">Marketing</p>
+                    </li>
+                </ul>
+            </section>
+            </div>
     </main>
 
     <footer class="footer">
-        <a class="footer-logo" href="./index.html">Web<span class="stud">Studio</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="container">
+            <a class="footer-logo" href="./index.html">Web<span class="stud">Studio</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
 
 </body>
