--- a/index.html
+++ b/index.html
@@ -93,23 +93,31 @@
                 <ul class="team-section-list">
                     <li class="team-section-item">
                         <img class="team-section-img" src="./images/img-01-mark.jpg" alt="photo of Mark Guerrero" width="264" height="260">
-                        <h3 class="team-section-subtitle">Mark Guerrero</h3>
-                        <p class="team-section-text">Product Designer</p>
+                        <div class="team-card-text">
+                            <h3 class="team-section-subtitle">Mark Guerrero</h3>
+                            <p class="team-section-text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-section-item">
                         <img class="team-section-img" src="./images/img-02-tom.jpg" alt="photo of Tom Ford" width="264" height="260">
-                        <h3 class="team-section-subtitle">Tom Ford</h3>
-                        <p class="team-section-text">Frontend Developer</p>
+                        <div class="team-card-text">
+                            <h3 class="team-section-subtitle">Tom Ford</h3>
+                            <p class="team-section-text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-section-item">
                         <img class="team-section-img" src="./images/img-03-camila.jpg" alt="photo of Camila Garcia" width="264" height="260">
-                        <h3 class="team-section-subtitle">Camila Garcia</h3>
-                        <p class="team-section-text">Marketing</p>
+                        <div class="team-card-text">
+                            <h3 class="team-section-subtitle">Camila Garcia</h3>
+                            <p class="team-section-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-section-item">
                         <img class="team-section-img" src="./images/img-04-daniel.jpg" alt="photo of Daniel Wilson" width="264" height="260">
-                        <h3 class="team-section-subtitle">Daniel Wilson</h3>
-                        <p class="team-section-text">UI Designer</p>
+                        <div class="team-card-text">
+                            <h3 class="team-section-subtitle">Daniel Wilson</h3>
+                            <p class="team-section-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -121,33 +129,45 @@
                 <ul class="portfolio-section-list">
                     <li class="portfolio-section-item">
                         <img class="portfolio-section-img" src="./images/img-05-banking-app.jpg" alt="photo of banking app" width="360" height="300">
-                        <h3 class="portfolio-section-subtitle">Banking App</h3>
-                        <p class="portfolio-section-text">App</p>
+                        <div class="portfolio-card-text">
+                            <h3 class="portfolio-section-subtitle">Banking App</h3>
+                            <p class="portfolio-section-text">App</p>
+                        </div>                          
                     </li>
                     <li class="portfolio-section-item">
                         <img class="portfolio-section-img" src="./images/img-06-cashless-payment.jpg" alt="photo of cashless payment" width="360" height="300">
-                        <h3 class="portfolio-section-subtitle">Cashless Payment</h3>
-                        <p class="portfolio-section-text">Marketing</p>
+                        <div class="portfolio-card-text">
+                            <h3 class="portfolio-section-subtitle">Cashless Payment</h3>
+                            <p class="portfolio-section-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-section-item">
                         <img class="portfolio-section-img" src="./images/img-07-meditation-app.jpg" alt="photo of meditation app" width="360" height="300">
-                        <h3 class="portfolio-section-subtitle">Meditation App</h3>
-                        <p class="portfolio-section-text">App</p>
+                        <div class="portfolio-card-text">
+                            <h3 class="portfolio-section-subtitle">Meditation App</h3>
+                            <p class="portfolio-section-text">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-section-item">
                         <img class="portfolio-section-img" src="./images/img-08-taxi-service.jpg" alt="photo of taxi service" width="360" height="300">
-                        <h3 class="portfolio-section-subtitle">Taxi Service</h3>
-                        <p class="portfolio-section-text">Marketing</p>
+                        <div class="portfolio-card-text">
+                            <h3 class="portfolio-section-subtitle">Taxi Service</h3>
+                            <p class="portfolio-section-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-section-item">
                         <img class="portfolio-section-img" src="./images/img-09-screen-illustrations.jpg" alt="photo of screen illustrations" width="360" height="300">
-                        <h3 class="portfolio-section-subtitle">Screen Illustrations</h3>
-                        <p class="portfolio-section-text">Design</p>
+                        <div class="portfolio-card-text">
+                            <h3 class="portfolio-section-subtitle">Screen Illustrations</h3>
+                            <p class="portfolio-section-text">Design</p>
+                        </div>
                     </li>
                     <li class="portfolio-section-item">
                         <img class="portfolio-section-img" src="./images/img-10-online-courses.jpg" alt="photi of online courses" width="360" height="300">
-                        <h3 class="portfolio-section-subtitle">Online Courses</h3>
-                        <p class="portfolio-section-text">Marketing</p>
+                        <div class="portfolio-card-text">
+                            <h3 class="portfolio-section-subtitle">Online Courses</h3>
+                            <p class="portfolio-section-text">Marketing</p>
+                        </div>
                     </li>
                 </ul>
             </section>
